SnapshotStatus API reports INIT for queued shards
The SnapshotStatus API now reports `INIT` on shard snapshots
that are enqueued behind other running snapshots of the same shard.

Closes: ES-13739